--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.76.0",
+    "@tanstack/react-query-devtools": "^5.76.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "sweetalert2": "^11.21.0",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
