--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "styled-components": "^6.1.18",
     "sweetalert2": "^11.21.0",
     "zustand": "^5.0.4"
