--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.76.0",
     "@tanstack/react-table": "^8.21.3",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
